--- a/src/App.css
+++ b/src/App.css
@@ -6,8 +6,13 @@ body {
 
 h1 {
   text-align: center;
+  color: darkorange;
 }
 
+p{
+  background-color: crimson;
+  color: #fff;
+}
 .board {
   width: 250px;
   height: 250px;
@@ -84,4 +89,22 @@ h1 {
   top: 50%;
   left: 5%;
   transform: skewY(-45deg);
+}
+
+.game-over {
+  text-align: center;
+  border: #5468ff 7px;
+  border-style: dotted;
+  padding: 8px;
+  margin-top: 30px;
+  font-size: 1.5em;
+}
+
+.reset-button {
+  margin-top: 30px;
+  padding: 20px;
+  background-color: #0074a6;
+  color: white;
+  width: 100%;
+  font-size: 1.5em;
 }
