--- a/src/App.css
+++ b/src/App.css
@@ -31,9 +31,9 @@ p{
   border: 1px solid #1cdd36;
 }
 
-.tile:first-child{
+/* .tile:first-child{
   background-color: red;
-}
+} */
 
 .x-hover:hover::after {
   content: "X";
